# servidor-autenticacion-dnie

./: .env  Cargo.toml  Dockerfile  LICENSE  README.md  localhost.key  nginx-working-site.conf
.github/workflows/: docker-image.yml
certs/: AC005.pem  localhost.crt  localhost.key
src/: auth.rs  main.rs  server_state.rs
src/app_state/: mod.rs
src/middleware/: client_cert_auth.rs  mod.rs
src/routes/: authorize.rs  mod.rs  test.rs  token.rs
