[package]
name = "servidor-autenticacion-dnie"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
axum-server = { version = "0.7", features = ["tls-rustls"], default-features = false }
tower = "0.5"
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "macros"] }
tokio-rustls = "0.26"
rustls = { version = "0.23", features = ["tls12"], default-features = false }
rustls-pki-types = { version = "1.10", default-features = false }
rustls-webpki = { version = "0.102", features = ["aws_lc_rs"], default-features = false }
futures-util = "0.3"
x509-parser = "0.16"
rsa = "0.9"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.11.0", features = ["v4"] }
biscuit = "0.7"
chrono = "0.4"
dotenvy = "0.15"

