[package]
name = "servidor-autenticacion-dnie"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
axum-server = { version = "0.7", features = ["tls-rustls"], default-features = false }
tower = "0.5"
tokio = { version = "1.44", features = ["rt", "rt-multi-thread", "macros"] }
tokio-rustls = { version = "0.26", features = ["aws-lc-rs", "tls12", "logging"], default-features = false }
rustls = { version = "0.23", features = ["tls12"], default-features = false }
rustls-pki-types = { version = "1.11", default-features = false }
rustls-webpki = { version = "0.103", features = ["aws-lc-rs"], default-features = false }
futures-util = "0.3"
x509-parser = "0.17"
dotenvy = "0.15"
